--- a/map/ze_purification_a1/default_ents.jsonc
+++ b/map/ze_purification_a1/default_ents.jsonc
@@ -60,7 +60,8 @@
 			"targetname": "language_case",
 			"classname": "logic_case",
 			"case01": "1", // 日本語
-			"case02": "2", // 한국어
+			"case02": "2", // 한국어,
+			"case03": "3", // English
 			"io":
 			[
                 // 日本語
@@ -2525,3 +2526,4 @@
 		}			
     ]
 }
+
