中文>日本語/한국어/English

--- a/map/ze_plants_vs_zombies/default_ents.jsonc
+++ b/map/ze_plants_vs_zombies/default_ents.jsonc
@@ -20,8 +20,7 @@
         {
             "match":
             {
-                "classname": "logic_auto",
-				"hammeruniqueid": "9036"
+                "classname": "logic_auto"
             },
 			"delete": // remove unnecessary output
             {
@@ -6387,4 +6386,5 @@
             }
         }
     ]
+
 }
