中文>日本語/한국어/English

--- a/map/ze_popkart_r/default_ents.jsonc
+++ b/map/ze_popkart_r/default_ents.jsonc
@@ -1,4 +1,4 @@
-// stripper by 兎RB 25.10.26
+// stripper by 兎RB 25.11.03
 // map ze_popkart_r
 // workshop id 3247766438
 // if find mistranslation tell me　https://steamcommunity.com/profiles/76561198343767968/
@@ -52,7 +52,7 @@
                         "outputname": "OnMapSpawn",
 						"targetname": "cmd",
                         "inputname": "Command",
-                        "overrideparam": "say language translation stripper 25.10.26 by 兎RB",
+                        "overrideparam": "say language translation stripper 25.11.03 by 兎RB",
                         "delay": 1.0,
                         "timestofire": -1
                     }
@@ -1521,10 +1521,124 @@
 					"timestofire": -1
 				}
             ]
-        }
+        },
+		// kart(prop) can get nade KB bug, disable nade 
+		{
+			"targetname": "disable_nade",
+            "classname": "logic_timer",
+            "startdisabled": "1",
+            "refiretime": "0.01",
+            "io":
+			[
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_decoy",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_flashbang",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_hegrenade",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_incgrenade",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_molotov",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_smokegrenade",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "weapon_tagrenade",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "flashbang_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "hegrenade_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "molotov_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "smokegrenade_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "decoy_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                },
+
+				{
+                    "outputname": "OnTimer",
+					"targetname": "tagrenade_projectile",
+                    "inputname": "Kill",                       
+                    "delay": 0.0,
+                    "timestofire": -1
+                }
+			]
+		}	
     ],
-    "modify": // remove message output, add targetname/output
+    "modify": 
     [
+		// remove message output
         {
             "match":
             {
@@ -1541,6 +1655,66 @@
                         "overrideparam": "say <<有玩家完成了比赛，成绩将在30秒后结算>>",
                         "delay": 0.0,
                         "timestofire": 1
+                    }
+				]	
+            }
+        },
+		// add fix kart(prop) KB bug output
+		{
+            "match":
+            {
+                "targetname": "[PR#]lv3_init_relay"
+            },
+            "insert":
+            {
+                "io":
+                [
+                    {
+                        "outputname": "OnTrigger",
+						"targetname": "disable_nade",
+                        "inputname": "Enable",
+                        "delay": 0.0,
+                        "timestofire": -1
+                    }
+				]	
+            }
+        },
+
+		{
+            "match":
+            {
+                "targetname": "[PR#]lv4_init_relay"
+            },
+            "insert":
+            {
+                "io":
+                [
+                    {
+                        "outputname": "OnTrigger",
+						"targetname": "disable_nade",
+                        "inputname": "Enable",
+                        "delay": 0.0,
+                        "timestofire": -1
+                    }
+				]	
+            }
+        },
+
+		{
+            "match":
+            {
+                "targetname": "[PR#]lv_kart_finished_tp"
+            },
+            "insert":
+            {
+                "io":
+                [
+                    {
+                        "outputname": "OnTrigger",
+						"targetname": "disable_nade",
+                        "inputname": "Disable",
+                        "delay": 0.0,
+                        "timestofire": -1
                     }
 				]	
             }
