--- a/map/ze_bh3rd_nagazoracity_z/default_ents.jsonc
+++ b/map/ze_bh3rd_nagazoracity_z/default_ents.jsonc
@@ -1,4 +1,4 @@
-// stripper by 兎RB 25.11.08
+// stripper by 兎RB 25.11.11
 // map ze_bh3rd_nagazoracity_z
 // workshop id 3423221710
 // if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
@@ -29,7 +29,7 @@
                         "outputname": "OnMapSpawn",
 						"targetname": "juben",
                         "inputname": "Command",
-                        "overrideparam": "say language translation stripper 25.11.08 by 兎RB",
+                        "overrideparam": "say language translation stripper 25.11.11 by 兎RB",
                         "delay": 1.0,
                         "timestofire": -1
                     }
@@ -1696,7 +1696,7 @@
 			]
 		},
 		// add lyric entity
-		// RE:CREATE
+		// Da Capo
         {
 			"targetname": "lyric_dacapo",
 			"classname": "trigger_multiple",
