中文>日本語/한국어/English

--- a/map/ze_arknights_sows/default_ents.jsonc
+++ b/map/ze_arknights_sows/default_ents.jsonc
@@ -9,7 +9,8 @@
         {
             "match":
             {
-                "classname": "logic_auto"
+                "classname": "logic_auto",
+				"hammeruniqueid": "9598"
             },
             "insert":
             {
